RESOLVED FIXED160158
[css-grid] grid-auto-flow|row should take a <track-size>+
https://bugs.webkit.org/show_bug.cgi?id=160158
Summary [css-grid] grid-auto-flow|row should take a <track-size>+
Sergio Villar Senin
Reported 2016-07-25 02:52:23 PDT
[css-grid] grid-auto-flow|row should take a <track-size>+
Attachments
Patch (40.26 KB, patch)
2016-07-25 03:35 PDT, Sergio Villar Senin
no flags
Archive of layout-test-results from ews103 for mac-yosemite (947.74 KB, application/zip)
2016-07-25 04:29 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (830.76 KB, application/zip)
2016-07-25 04:31 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-yosemite (1.45 MB, application/zip)
2016-07-25 04:43 PDT, Build Bot
no flags
Patch (42.58 KB, patch)
2016-07-25 06:37 PDT, Sergio Villar Senin
darin: review+
Sergio Villar Senin
Comment 1 2016-07-25 03:35:13 PDT
WebKit Commit Bot
Comment 2 2016-07-25 03:37:26 PDT
Attachment 284471 [details] did not pass style-queue: ERROR: Source/WebCore/css/CSSParser.h:246: 'parseGridTrackList' is incorrectly named. It should be named 'protector' or 'protectedTrackListType'. [readability/naming/protected] [4] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3 2016-07-25 04:29:30 PDT
Comment on attachment 284471 [details] Patch Attachment 284471 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1750408 New failing tests: svg/css/getComputedStyle-basic.xhtml
Build Bot
Comment 4 2016-07-25 04:29:35 PDT
Created attachment 284473 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2016-07-25 04:31:42 PDT
Comment on attachment 284471 [details] Patch Attachment 284471 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1750410 New failing tests: svg/css/getComputedStyle-basic.xhtml
Build Bot
Comment 6 2016-07-25 04:31:46 PDT
Created attachment 284474 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-07-25 04:42:56 PDT
Comment on attachment 284471 [details] Patch Attachment 284471 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1750424 New failing tests: svg/css/getComputedStyle-basic.xhtml
Build Bot
Comment 8 2016-07-25 04:43:00 PDT
Created attachment 284475 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Sergio Villar Senin
Comment 9 2016-07-25 06:37:55 PDT
Created attachment 284481 [details] Patch There was 1 test in svg checking the types of the computed style objects
WebKit Commit Bot
Comment 10 2016-07-25 06:47:26 PDT
Attachment 284481 [details] did not pass style-queue: ERROR: Source/WebCore/css/CSSParser.h:246: 'parseGridTrackList' is incorrectly named. It should be named 'protector' or 'protectedTrackListType'. [readability/naming/protected] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 11 2016-07-25 09:37:10 PDT
Comment on attachment 284481 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=284481&action=review > Source/WebCore/css/StyleBuilderConverter.h:1006 > + Vector<GridTrackSize> trackSizes; > + for (auto& currValue : downcast<CSSValueList>(value)) { > + ASSERT(!currValue->isGridLineNamesValue()); > + ASSERT(!currValue->isGridAutoRepeatValue()); > + trackSizes.append(convertGridTrackSize(styleResolver, currValue)); > + } > + return trackSizes; A more efficient idiom would be to call reserveInitialCapacity and then use uncheckedAppend.
Chris Dumez
Comment 12 2016-07-25 09:41:20 PDT
Comment on attachment 284481 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=284481&action=review > Source/WebCore/css/CSSComputedStyleDeclaration.cpp:1121 > + return WTFMove(list); Could we update the function to return a Ref<CSSValueList> and stop using WTFMove() here?
Sergio Villar Senin
Comment 13 2016-07-26 02:14:17 PDT
Comment on attachment 284481 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=284481&action=review >> Source/WebCore/css/CSSComputedStyleDeclaration.cpp:1121 >> + return WTFMove(list); > > Could we update the function to return a Ref<CSSValueList> and stop using WTFMove() here? Sure >> Source/WebCore/css/StyleBuilderConverter.h:1006 >> + return trackSizes; > > A more efficient idiom would be to call reserveInitialCapacity and then use uncheckedAppend. Indeed, I'll update it before landing
Sergio Villar Senin
Comment 14 2016-07-26 02:39:00 PDT
Note You need to log in before you can comment on or make changes to this bug.