Source/WebCore/rendering/style/StyleGridData.h
@@ -85,8 +85,8 @@ public:
 
     unsigned m_gridAutoFlow : GridAutoFlowBits;
 
-    GridTrackSize m_gridAutoRows;
-    GridTrackSize m_gridAutoColumns;
+    Vector<GridTrackSize> m_gridAutoRows;
+    Vector<GridTrackSize> m_gridAutoColumns;
 
     NamedGridAreaMap m_namedGridArea;
     // Because m_namedGridArea doesn't store the unnamed grid areas, we need to keep track
